Implemented move with velocity when moving with the axes Bezier algos for path planning work as intended.

--- a/3dController/CMakeLists.txt
+++ b/3dController/CMakeLists.txt
@@ -3,11 +3,24 @@
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable (${PROJECT_NAME} "main.cpp" "includes.h" "MoveQueue/MoveQueue.cpp")
+add_executable (${PROJECT_NAME} 
+"main.cpp" 
+"includes.h" 
+"icon.rc")
+
 add_subdirectory ("Motor")
 add_subdirectory ("Controller")
 add_subdirectory ("PathFinder")
 add_subdirectory ("SerialPort")
 add_subdirectory ("MoveQueue")
+add_subdirectory ("G-CodeLoader")
+add_subdirectory ("LogService")
 
-target_link_libraries(${PROJECT_NAME} Motor Controller PathFinder SerialPort MoveQueue)
+target_link_libraries(${PROJECT_NAME} 
+Motor 
+Controller 
+PathFinder 
+SerialPort 
+MoveQueue 
+GCodeLoader 
+LogService)
