--- a/3dController/Motor/CMakeLists.txt
+++ b/3dController/Motor/CMakeLists.txt
@@ -1,2 +1,9 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-add_library (Motor "Motor.cpp" "Motor.h" "MotorUtils.h" "Commands.h")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+add_library (Motor 
+"Motor.cpp" 
+"Motor.h" 
+"MotorUtils.h" 
+"Commands.h")
