--- a/3dController/PathFinder/CMakeLists.txt
+++ b/3dController/PathFinder/CMakeLists.txt
@@ -1,2 +1,6 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-add_library (PathFinder "PathFinder.cpp" "PathFinder.h" "Point2d.h")
+
+add_library (PathFinder 
+"PathFinder.cpp" 
+"PathFinder.h" 
+"Point2d.h")
