--- a/3dController/SerialPort/CMakeLists.txt
+++ b/3dController/SerialPort/CMakeLists.txt
@@ -1,2 +1,7 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-add_library (SerialPort "SerialPort.cpp" "SerialPort.h")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+add_library (SerialPort 
+"SerialPort.cpp" 
+"SerialPort.h")
