--- a/3dController/Controller/CMakeLists.txt
+++ b/3dController/Controller/CMakeLists.txt
@@ -1,2 +1,5 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-add_library (Controller "Controller.cpp" "Controller.h")
+
+add_library (Controller 
+"Controller.cpp" 
+"Controller.h")
