--- a/3dController/MoveQueue/CMakeLists.txt
+++ b/3dController/MoveQueue/CMakeLists.txt
@@ -1,2 +1,5 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-add_library (MoveQueue "MoveQueue.cpp" "MoveQueue.h")
+
+add_library (MoveQueue 
+"MoveQueue.cpp" 
+"MoveQueue.h")
