--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-﻿cmake_minimum_required (VERSION 3.8)
+﻿project("RoMoController")
+cmake_minimum_required (VERSION 3.8)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-project("RoMoController")
 
 # Include sub-projects.
 add_subdirectory ("RoMoController")
