add platform specific linking

--- a/RoMoController/CMakeLists.txt
+++ b/RoMoController/CMakeLists.txt
@@ -21,7 +21,11 @@ add_subdirectory ("LogService")
 
 set(SourceLibs "Motor" "LogService" "PathFinder" "GCodeLoader" "MoveQueue" "SerialPort" "Controller")
 
+IF(WIN32)
+target_link_libraries(${PROJECT_NAME} ${SourceLibs})
+ELSE()
 target_link_options(${PROJECT_NAME} PUBLIC -std=c++17 -pthread)
 target_link_libraries(${PROJECT_NAME} 
 "$<LINK_GROUP:RESCAN,${SourceLibs}>"
 )
+ENDIF()
