--- a/RoMoController/CMakeLists.txt
+++ b/RoMoController/CMakeLists.txt
@@ -1,5 +1,5 @@
-﻿project("RoMoController")
-cmake_minimum_required (VERSION 3.24)
+﻿cmake_minimum_required (VERSION 3.24)
+project("RoMoController")
 
 
 set(CMAKE_CXX_STANDARD 17)
