add group relative move

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -6,7 +6,7 @@
       "generator": "Ninja",
       "configurationType": "Debug",
       "inheritEnvironments": [ "clang_cl_x64" ],
-      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "buildRoot": "${projectDir}\\build",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "-G Ninja -D CMAKE_C_COMPILER=\"C:/Program Files (x86)/Microsoft Visual Studio/2019/Professional/VC/Tools/Llvm/bin/clang.exe\" -D CMAKE_CXX_COMPILER=\"C:/Program Files (x86)/Microsoft Visual Studio/2019/Professional/VC/Tools/Llvm/bin/clang++.exe\" -D CMAKE_CXX_FLAGS_INIT=\"-Werror -Wall -Wextra -Wc++17-extensions\"",
       "buildCommandArgs": "",
